--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,33 +1,46 @@
-.App {
+html, body {
   text-align: center;
   width: 100%;
+  height: 100%;
 }
 
-/*.App-logo {*/
-/*animation: App-logo-spin infinite 20s linear;*/
-/*height: 40vmin;*/
-/*}*/
+#root {
+  height: 100%;
+}
 
-.App-header {
-  background-color: white;
-  min-height: 10vh;
+.board {
   display: flex;
-  /*flex-direction: row;*/
-  align-items: center;
-  justify-content: space-between;
-  font-size: calc(10px + 2vmin);
-  color: black;
+  justify-content: start;
+  height: 100%;
 }
 
-/*.App-link {*/
-/*color: #61dafb;*/
-/*}*/
+.list {
+  width: 300px;
+  min-width: 300px;
+  height: 100%;
+  border: 1px solid black;
+  border-radius: 2px;
+  margin: 5px;
+}
 
-/*@keyframes App-logo-spin {*/
-/*from {*/
-/*transform: rotate(0deg);*/
-/*}*/
-/*to {*/
-/*transform: rotate(360deg);*/
-/*}*/
-/*}*/
+.list-title {
+  padding: 5px;
+  text-align: start;
+  font-weight: bold;
+}
+
+.card {
+  background-color: white;
+  border-radius: 2px;
+  margin: 5px;
+}
+
+textarea {
+  background-color: transparent;
+  border: none;
+  resize: none;
+  overflow-wrap: break-word;
+  overflow: auto;
+  overflow-y: hidden;
+  max-height: 200px;
+}
