--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,50 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+html, body {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+}
+
+.board {
+  display: flex;
+  justify-content: start;
+  height: 100%;
+}
+
+.list {
+  width: 300px;
+  min-width: 300px;
+  height: 100%;
+  border: 1px solid black;
+  border-radius: 2px;
+  margin: 5px;
+}
+
+.list-title {
+  padding: 5px;
+  text-align: start;
+  font-weight: bold;
+}
+
+.card {
+  background-color: white;
+  border-radius: 2px;
+  margin: 5px;
+}
+
+textarea {
+  background-color: transparent;
+  border: none;
+  resize: none;
+  overflow-wrap: break-word;
+  overflow: auto;
+  overflow-y: hidden;
+  max-height: 200px;
+}
